Implement entity file caching mechanism with local storage